Fix unreadable post content on posts with images

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -615,6 +615,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
     font-family: Georgia, serif;
     font-size: 2.2rem;
     line-height: 1.6em;
+    background: var(--d-background);
 }
 
 @media (max-width: 1170px) {
